# bw-crm

./: Cargo.toml  MIGRATION.md  README.md  run-clean.sh  run.sh
.github/workflows/: rust.yml
src/: client_controller.rs  client_model.rs  email.rs  email_controller.rs  email_model.rs  main.rs  sync_manager.rs  user_controller.rs  user_model.rs  users_controller.rs
web/: client-details.html  clients.html  email-details.html  emails.html  forbidden.html  index.html  send-email.html
web-2/: index.html  package-lock.json  package.json
web-2/src/: app.jsx  index.css  store.js
web-2/src/components/: auth-gate.jsx  container.jsx  emails-layout.jsx  forms.jsx  list-layout.jsx  main-layout.jsx  minimal-layout.jsx  nav.jsx  nav.module.css  page-title.jsx
web-2/src/data/: contact-stages.js  contacts.js  countries.js  deal-stages.js  email-templates.js  emails.js  lists.js  users.js
web-2/src/helpers/: capitalize-first-letter.js
web-2/src/models/: stage.js
web-2/src/routes/: contacts.jsx  dashboard.jsx  email-send.jsx  email-send.tsx  email-template-send.jsx  email-templates.jsx  email.jsx  emails.jsx  leads-board.jsx  lists.jsx  login.jsx  not-found.jsx  pipeline.jsx  users.jsx
web/scripts/: client-details.js  clients.js  emails.js  login.js  send-email.js
web/styles/: container.css  deflist.css  forms.css  header.css  main.css  normalize.css  table.css  utils.css
